<resources>
    <string name="app_name">Atex</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="title_location">Place</string>
    <string name="title_profile">Profile</string>
    <string name="logo">Logo</string>
    <string name="navigation_drawer_header_content_description">Image Avatar</string>
    <string name="navigation_drawer_header_title">Mr Yo</string>
    <string name="navigation_drawer_header_description">Senior Software Engineer</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="contentDescription">Content Description</string>
    <string name="save">Save</string>
    <string name="detail">View Detail</string>
    <string name="upload">Upload</string>
    <string name="signout">Sign Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_scan">Scan</string>
    <string name="title_ranking">Ranking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_button_text">Scan: an Ai will help you to sort waste into different categories.</string>
    <string name="upload_button_text">Upload: upload images to make our AI even better and collect points.</string>
    <string name="upload_type_of_waste">Type of waste</string>
    <string name="choose_an_image">choose an image</string>
    <string name="hint_email">email@gmail.com</string>
    <string name="hint_password">Password</string>
    <string name="com_facebook_loginview_log_in_button">Connect</string>
    <string name="com_facebook_loginview_log_out_button">Your Logout</string>
    <string name="daily_mission">Daily Mission</string>
    <string name="today_ranking">Today\'s Ranking</string>
    <string name="copyright_text">© 2021 Atex.org. All rights reserved.</string>
    <string name="recycling_101">Recycling 101</string>
    <string name="title_reward">Reward</string>
</resources>