<?xml version="1.0" encoding="utf-8"?><!--
  ~ Developed by Hung Pham on $today.date
  ~ Email: admin@yomemo.com || numerotech@gmail.com
  ~ Last modified 10/18/18 12:24 PM
  ~ Copyright (c) 2019. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~         https://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_scan"
            android:icon="@drawable/ic_baseline_control_camera_24"
            android:title="@string/title_scan" />
        <item
            android:id="@+id/navigation_place"
            android:icon="@drawable/ic_location"
            android:title="@string/title_location" />
        <item
            android:id="@+id/navigation_ranking"
            android:icon="@drawable/ic_baseline_auto_graph_24"
            android:title="@string/title_ranking" />
        <item
            android:id="@+id/navigation_friends"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/title_friends" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/title_profile" />
        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/sign_out" />
    </group>

</menu>

