<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_baseline_control_camera_24"
        android:title="@string/title_scan" />
    <item
        android:id="@+id/navigation_place"
        android:title="@null" />
    <item
        android:id="@+id/navigation_reward"
        android:icon="@drawable/ic_baseline_auto_graph_24"
        android:title="@string/title_reward" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>