<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.atex.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_scan"
        android:name="org.atex.app.ui.scan.ScanFragment"
        android:label="fragment_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_navigation_upload"
            app:destination="@id/navigation_upload" />

    </fragment>
    <fragment
        android:id="@+id/navigation_place"
        android:name="org.atex.app.ui.place.PlaceFragment"
        tools:layout="@layout/fragment_place" />
    <fragment
        android:id="@+id/navigation_ranking"
        android:name="org.atex.app.ui.ranking.RankingFragment"
        android:label="fragment_ranking"
        tools:layout="@layout/fragment_ranking" />
    <fragment
        android:id="@+id/navigation_friends"
        android:name="org.atex.app.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.atex.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="org.atex.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_upload"
        android:name="org.atex.app.ui.upload.UploadFragment"
        android:label="fragment_upload"
        tools:layout="@layout/fragment_upload" />


</navigation>